--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@angular/router": "~11.2.13",
     "@fortawesome/fontawesome": "^1.1.8",
     "@ng-bootstrap/ng-bootstrap": "^9.1.0",
+    "@ngx-loading-bar/core": "^5.1.2",
     "bootstrap": "^5.0.0",
     "bootstrap-icons": "^1.4.1",
     "firebase": "^7.0 || ^8.0",
     "jw-angular-social-buttons": "^1.0.0",
+    "ngx-progressbar": "^6.1.1",
     "ngx-sharebuttons": "^8.0.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
